crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_if__basic_v_if.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<div v-if=\"foo\">hello</div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  if (_ctx.foo) {
    _push(`<div${_ssrRenderAttrs(_attrs)}>hello</div>`)
  } else {
    _push(`<!---->`)
  }
}
