crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_if__v_if_else.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<div v-if=\"foo\">foo</div><div v-else>bar</div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  if (_ctx.foo) {
    _push(`<div${_ssrRenderAttrs(_attrs)}>foo</div>`)
  } else {
    _push(`<div${_ssrRenderAttrs(_attrs)}>bar</div>`)
  }
}
