crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_if__v_if_on_template.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "compile_full(r#\"<template v-if=\"foo\"><div>hello</div></template>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  if (_ctx.foo) {
    _push(`<div${_ssrRenderAttrs(_attrs)}>hello</div>`)
  } else {
    _push(`<!---->`)
  }
}
